:lipstick: added screws

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,22 @@
     Skinner Box
   </h1>
 </header>
+<div class="topScrews">
+  <div class="screw screw1">
+    <div class="groove"></div>
+  </div>
+
+  <div class="screw screw2">
+    <div class="groove"></div>
+  </div>
+</div>
 <router-outlet></router-outlet>
+<div class="bottomScrews">
+  <div class="screw screw3">
+    <div class="groove"></div>
+  </div>
+
+  <div class="screw screw4">
+    <div class="groove"></div>
+  </div>
+</div>
