--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -5,15 +5,15 @@
 </nav>
 
 <div class="panel-wrapper">
-  <div class="panel">
-    <div id="leftPanel">
+  <div [ngClass]="{centered: isCentered}" class="panel">
+    <div *ngIf="gameLevel > 1" id="leftPanel">
       <h2>Left Panel</h2>
       <p>Fixie tilde subway tile affogato drinking vinegar. Occupy skateboard keytar stumptown. Enamel pin tattooed godard austin literally banjo. Next level plaid meditation godard slow-carb. Ethical hashtag tote bag whatever man braid cronut. Sustainable craft beer hammock deep v edison bulb ennui knausgaard fashion axe kitsch offal before they sold out freegan actually meggings. Messenger bag intelligentsia tumeric subway tile seitan typewriter taiyaki actually bicycle rights etsy ramps selvage hashtag man braid pabst. Butcher cred trust fund prism whatever plaid cronut, tumeric cold-pressed. Vexillologist leggings pour-over, shabby chic XOXO mustache shoreditch art party cornhole flexitarian chambray tacos green juice humblebrag edison bulb. XOXO master cleanse meditation, tattooed you probably haven't heard of them distillery pok pok celiac viral stumptown dreamcatcher wolf sustainable wayfarers plaid.</p>
     </div>
     <div id="centerPanel">
-      <!--<gas-chamber></gas-chamber>-->
+      <gas-chamber [gameState]="gameState"></gas-chamber>
     </div>
-    <div id="rightPanel">
+    <div *ngIf="gameLevel > 2" id="rightPanel">
       <h2>Right Panel</h2>
       <p>Fixie tilde subway tile affogato drinking vinegar. Occupy skateboard keytar stumptown. Enamel pin tattooed godard austin literally banjo. Next level plaid meditation godard slow-carb. Ethical hashtag tote bag whatever man braid cronut. Sustainable craft beer hammock deep v edison bulb ennui knausgaard fashion axe kitsch offal before they sold out freegan actually meggings. Messenger bag intelligentsia tumeric subway tile seitan typewriter taiyaki actually bicycle rights etsy ramps selvage hashtag man braid pabst. Butcher cred trust fund prism whatever plaid cronut, tumeric cold-pressed. Vexillologist leggings pour-over, shabby chic XOXO mustache shoreditch art party cornhole flexitarian chambray tacos green juice humblebrag edison bulb. XOXO master cleanse meditation, tattooed you probably haven't heard of them distillery pok pok celiac viral stumptown dreamcatcher wolf sustainable wayfarers plaid.</p>
     </div>
