--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,38 @@
-<header>
-  <h1>
-    Skinner Box
-  </h1>
-</header>
-<div class="topScrews">
+<header class="header">
   <div class="screw screw1">
     <div class="groove"></div>
+  </div>
+
+  <div class="nameplate embossed raised engraved-text">
+    <div class="leftScrews">
+      <div class="smallScrew screw1">
+        <div class="smallGroove"></div>
+      </div>
+
+      <div class="smallScrew screw2">
+        <div class="smallGroove"></div>
+      </div>
+    </div>
+    <h1>
+      Skinner Panel
+    </h1>
+    <div class="rightScrews">
+      <div class="smallScrew screw3">
+        <div class="smallGroove"></div>
+      </div>
+
+      <div class="smallScrew screw4">
+        <div class="smallGroove"></div>
+      </div>
+    </div>
   </div>
 
   <div class="screw screw2">
     <div class="groove"></div>
   </div>
-</div>
+
+</header>
+<div class="topScrews"></div>
 <router-outlet></router-outlet>
 <div class="bottomScrews">
   <div class="screw screw3">
