--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -48,7 +48,16 @@ nav a:active {
   /*height: 15%;*/
 /*}*/
 
+.centered {
+  display: flex;
+  justify-content: center;
+}
 
+@media screen and (orientation: portrait) {
+  .panel-wrapper {
+    height: 83.5%;
+  }
+}
 @media screen and (min-width: 1024px) and (orientation: landscape) {
   .panel {
     width: 100%
