--- a/src/styles.css
+++ b/src/styles.css
@@ -49,63 +49,9 @@ table {
 body {
   height: 100vh;
   background-image: url("./assets/images/brushed-alum.png");
-  background-color: #555;
+  background-color: #abacad;
+  font-family: 'Roboto', sans-serif;
 }
 
-.screw {
-  cursor:pointer;
-  margin: .8vh;
-  height: 4vh;
-  width: 4vh;
-  background-image: -webkit-radial-gradient(  50%   0%,  8% 50%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
-  -webkit-radial-gradient(  50% 100%, 12% 50%, hsla(0,0%,100%,.6) 0%, hsla(0,0%,100%,0) 100%),
-  -webkit-radial-gradient(   0%  50%, 50%  7%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
-  -webkit-radial-gradient( 100%  50%, 50%  5%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
 
-  -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   3%, hsla(0,0%,  0%,.1) 3.5%),
-  -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%,.1) 7.5%),
-  -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.2) 2.2%),
 
-  -webkit-radial-gradient( 50% 50%, 200% 50%, hsla(0,0%,90%,1) 5%, hsla(0,0%,85%,1) 30%, hsla(0,0%,60%,1) 100%);
-  border-radius:50%;
-  position:relative;
-  box-shadow:0 0 .4vh 0 #222;
-
-  -webkit-transition: 6s;
-  -moz-transition: 6s;
-  -ms-transition: 6s;
-  -o-transition: 6s;
-  transition: 6s;
-
-}
-.groove {
-  height:.4vh;
-  width:100%;
-  background: #bfbfbf;
-  position:absolute;
-  top: 1.8vh;
-  box-shadow:inset 0 .08vh .12vh 0 #666;
-}
-
-.topScrews,
-.bottomScrews {
-  display: flex;
-  height: 6vh;
-  justify-content: space-between;
-}
-
-.screw1 {
-  transform: rotate(12deg);
-}
-
-.screw2 {
-  transform: rotate(108deg);
-}
-
-.screw3 {
-  transform: rotate(-37deg);
-}
-
-.screw4 {
-  transform: rotate(-6deg);
-}
